@@ -7,7 +7,7 @@ use Number::Phone;
 
 our $VERSION = "2.0001";
 
-use DBM::Deep;
+use Data::CompactReadonly;
 use File::ShareDir;
 
 my $file = Number::Phone::_find_data_file('Number-Phone-UK-Data.db');
@@ -22,7 +22,7 @@ sub db {
         # we want to re-open the DB if we've forked, because of
         # https://github.com/DrHyde/perl-modules-Number-Phone/issues/72
         $pid = $$;
-        $db = DBM::Deep->new($file);
+        $db = Data::CompactReadonly->read($file, tie => 1);
     }
     return $db
 }
